--- a/src/content/docs/licenses/license-information/general-usage-licenses/global-technical-support-offerings.mdx
+++ b/src/content/docs/licenses/license-information/general-usage-licenses/global-technical-support-offerings.mdx
@@ -641,7 +641,7 @@ If you need assistance with New Relic Products, you are in good hands with sever
 ## Scope of support
 ### What's in scope? 
 
-You can have confidence that the Products we make Generally Available are fully tested with the compatible environments outlined in [New Relic Documentation](https://docs.newrelic.com/). New Relic’s Global Technical Support provides assistance for: the New Relic platform and its features and capabilities, New Relic's monitoring and observability solutions, and our alerting and Applied Intelligence features. For issues within Third Party tools, or when tools in your infrastructure aren't working together properly, Global Technical Support may reach a point where we must refer New Relic users to such Third Party or community for assistance. We provide assistance in English or Japanese only.
+You can have confidence that the Products we make Generally Available are fully tested with the compatible environments outlined in [New Relic Documentation](https://docs.newrelic.com/). New Relic’s Global Technical Support provides assistance for: the New Relic platform and its features and capabilities, New Relic's monitoring and observability solutions, and our alerting and Applied Intelligence features. For issues within Third Party tools, or when tools in your infrastructure aren't working together properly, Global Technical Support may reach a point where we must refer New Relic users to such Third Party or community for assistance. We provide assistance in English. For New Relic Japan KK customers, we also provide Japanese language support.
 
 ### What's out of scope?
 
